created admin panel to edit ingredients